<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Splash.MainActivity"
    android:background="@drawable/background_bg">

    <LinearLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/banner_top"/>

    </LinearLayout>

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/banner"
        android:text="@string/login"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20sp"/>


    <TextView
        android:id="@+id/mobile_number_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        android:text="@string/please_enter_your_mobile_number"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        android:textColor="@color/darkgrey"
        android:textSize="16sp"/>


    <RelativeLayout
        android:id="@+id/rlPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mobile_number_text"
        >

        <RelativeLayout
            android:id="@+id/rlCCode"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/ivFlag"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:src="@drawable/flag_in" />

            <TextView
                android:id="@+id/tvCountryCodeTxt"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8sp"
                android:layout_toRightOf="@+id/ivFlag"
                android:text="+91"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/rlCCode"
            >

            <EditText
                android:id="@+id/etPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@android:color/transparent"
                android:hint="@string/enter_your_number"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="#C5C4C4"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textview_number_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_10_digit_number"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp"
                android:layout_marginRight="12dp"
                android:gravity="right"
                android:visibility="gone"
                />

        </LinearLayout>



    </RelativeLayout>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightgrey"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_right"
        app:layout_constraintTop_toBottomOf="@id/rlPhoneNum"/>


    <TextView
        android:id="@+id/send_otp_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_will_send_a_6_digit_otp_to_verify"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:textColor="#C5C4C4"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"/>


    <carbon.widget.Button
        android:id="@+id/btn_login"
        style="@style/carbon_Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/send_otp_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/btn_login"
        android:shadowRadius="10.0"
        android:shadowDy="10.0"
        app:carbon_elevation="10dp"
        app:carbon_elevationAmbientShadowColor="@color/purple"
        app:carbon_elevationShadowColor="@color/purple"/>






    <carbon.widget.TextView
        android:id="@+id/social_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or_login_with_social_account"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        android:gravity="center"
        android:layout_marginTop="20dp"/>



    <LinearLayout
        android:id="@+id/social_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/social_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_right"
        android:gravity="center_vertical">


        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_weight="1"
            android:elevation="4dp"
            />

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>


        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/sign_up_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/social_linear">


        <carbon.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            android:textSize="16sp"/>


        <TextView
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/purple"/>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>