<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_bg">
    <!--
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.MainDrawerActivity"
    tools:showIn="@layout/app_bar_main_drawer"
    -->

    <RelativeLayout
        android:id="@+id/rel_layout"
        android:layout_width="0dp"
        android:layout_height="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:fillViewport="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rel_layout"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <RelativeLayout
                android:id="@+id/rlMaker"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/maker_space_bg">
                <ImageView
                    android:id="@+id/ivMakerSpace"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/maker_space_ic"/>
                <carbon.widget.TextView
                    android:layout_toRightOf="@id/ivMakerSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_centerVertical="true"
                    android:text="@string/maker_space_courses"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlFreeCourse"
                android:layout_below="@+id/rlMaker"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                app:layout_constraintTop_toBottomOf="@id/rlMaker"
                android:background="@drawable/free_course_bg">
                <ImageView
                    android:id="@+id/ivFreeCourse"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/free_course_ic"/>
                <carbon.widget.TextView
                    android:layout_toRightOf="@id/ivFreeCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_centerVertical="true"
                    android:text="@string/free_courses"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlAtlCourses"
                android:layout_below="@id/rlFreeCourse"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                app:layout_constraintTop_toBottomOf="@id/rlFreeCourse"
                android:background="@drawable/school_curi_bg">
                <ImageView
                    android:id="@+id/ivSchoolCuriculum"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/school_curi_ic"/>
                <carbon.widget.TextView
                    android:layout_toRightOf="@id/ivSchoolCuriculum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_centerVertical="true"
                    android:text="@string/atl_courses"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>