<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/ranking_background"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:layout_marginTop="80dp"
    android:id="@+id/bottom_sheet">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp">

        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_purple_close"/>

        <carbon.widget.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Passed"
            android:textSize="18sp"
            android:gravity="center"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">
        
        <carbon.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_questions"
            android:textColor="@color/darkgrey"/>

        <carbon.widget.TextView
            android:id="@+id/tvTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="20"
            android:textSize="18sp"
            android:gravity="end"/>
        
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <carbon.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions_answered"
            android:textColor="@color/darkgrey"/>

        <carbon.widget.TextView
            android:id="@+id/tvQuestionAnswered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="19"
            android:textColor="@color/purple"
            android:textSize="18sp"
            android:gravity="end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <carbon.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_answers"
            android:textColor="@color/darkgrey"/>

        <carbon.widget.TextView
            android:id="@+id/tvCorrectAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="15"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:gravity="end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgrey"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <carbon.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passing_score"
            android:textSize="18sp"
            android:textColor="@color/darkgrey"/>

        <carbon.widget.TextView
            android:id="@+id/tvPassingScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="75%"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:gravity="end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <carbon.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time Taken"
            android:textSize="18sp"
            android:textColor="@color/darkgrey"/>

        <carbon.widget.TextView
            android:id="@+id/tvTimeTaken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="18.51s"
            android:textColor="@color/purple"
            android:textSize="18sp"
            android:gravity="end"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <ImageView
            style="@style/carbon_ImageView.Avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_badge"
            android:elevation="12dp"
            android:background="@android:color/transparent"
            />

        <carbon.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="YOU Got A new Rank"
            android:layout_marginTop="10dp"/>

        <carbon.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Scholar"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textColor="@color/purple"
            android:layout_marginTop="6dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:gravity="center_vertical">
    
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_reattempt"/>
        
        <carbon.widget.Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            style="@style/carbon_Button.Colored"
            android:background="@drawable/btn_login"
            android:text="Go Home"
            android:textAllCaps="true"
            android:layout_marginStart="20dp"
            app:carbon_elevationShadowColor="@color/purple"
            app:carbon_elevation="12dp"/>


    </LinearLayout>

</LinearLayout>